syntax = "proto3";

package profiles;    


// üë§ Profile Service - handles user profiles and user management
service ProfilesService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc SendOtp(SendOtpRequest) returns (SendOtpResponse);
  rpc VerifyOtp(VerifyOtpRequest) returns (SendOtpResponse);
  rpc Logout(LogoutRequest) returns (SendOtpResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  rpc GetRoles(EmptyRequest) returns (GetRolesResponse);
  
  // User Management
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetBusinessUser(GetUserRequest) returns (BusinessUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc UpdateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse);
  rpc GetUserContacts(GetUserContactsRequest) returns (GetUserContactsResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

}

// üìù REQUEST MESSAGES

message EmptyRequest {}

message RegisterResponse {
  bool success = 1;
  optional string error = 2;
  optional string message = 3;
  optional string auth_token = 4;
}

message Role {
  string role_id = 1;
  string role_name = 2;
  bool is_active = 3;
}

message GetRolesResponse {
  repeated Role roles = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message SendOtpRequest {
  string token = 1;
  SendOtpType type = 2;
}

message VerifyOtpRequest {
  string token = 1;
  string otp = 2;
  SendOtpType type = 3;
}

message SendOtpResponse {
  bool success = 1;
  optional string error = 2;
  optional string message = 3;
}

message RefreshTokenResponse {
  bool success = 1;
  User user = 2;
  string access_token = 3;
}



message AuthResponse {
  bool success = 1;
  optional string error = 2;
  User user = 3;
  string access_token = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string phone_number = 3;
  string company_ref = 4;
  ROLES_ENUM role_name = 5;
}


enum ROLES_ENUM {
  CLIENT = 0;
  BUSINESS_USER = 1;
  STAFF = 2;
}

message LogoutRequest {
  string user_id = 1;
}

message RefreshTokenRequest {
  string user_id = 1;
}



message GetUserRequest {
  string user_id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UpdateUserStatusRequest {
  string user_id = 1;
  string last_seen = 2;
}

message GetUserContactsRequest {
  string user_id = 1;
  optional string name = 2;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string email = 4;
  optional string phone_number = 5;
  optional string avatar_url = 6;
  optional Address address = 7;
}

// üì§ RESPONSE MESSAGES

message BusinessUser {
  string business_user_id = 1;
  string user_id = 2;
  string email = 3;
  string phone_number = 4;
  string organization_id = 5;
  string access_type = 6;
  int32 access_level = 7;
  bool is_active = 8;
  optional string notes = 9;
}

message BusinessUserResponse {
  bool success = 1;
  optional string error = 2;
  optional BusinessUser business_user = 3;
}

message UserResponse {
  bool success = 1;
  optional string error = 2;
  optional User user = 3;
}

message GetUserByEmailResponse {
  bool success = 1;
  optional string error = 2;
  optional string message = 3;
  optional User user = 4;
}

message UpdateUserStatusResponse {
  bool success = 1;
  optional string error = 2;
  optional BasicUser user = 3;
}

message GetUserContactsResponse {
  bool success = 1;
  optional string error = 2;
  repeated Contact contacts = 3;
  int32 total_count = 4;
}

message UpdateUserResponse {
  bool success = 1;
  optional string error = 2;
  optional BasicUser user = 3;
}

// üèóÔ∏è DATA MODELS

message User {
  string user_id = 1;
  string email = 2;
  optional string username = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string phone_number = 6;
  optional string avatar_url = 7;
  optional string last_seen = 8;
  string created_at = 9;
  string updated_at = 10;
  bool email_verified = 11;
  optional Address address = 12;
  optional UserRole user_role = 13;
  optional BusinessUser business_user = 14;
}

message BasicUser {
  string user_id = 1;
  string email = 2;
  optional string username = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string phone_number = 6;
  optional string last_seen = 7;
  string created_at = 8;
  string updated_at = 9;
  bool email_verified = 10;
}

message Contact {
  string user_id = 1;
  string email = 2;
  optional string username = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string avatar_url = 6;
  optional string last_seen = 7;
  bool email_verified = 8;
}

message Address {
  optional string address_id = 1;
  optional string street = 2;
  optional string building = 3;
  optional string apartment = 4;
  optional string district = 5;
  optional string city = 6;
  optional string state = 7;
  optional string postal_code = 8;
  optional string country = 9;
  optional string landmark = 10;
  optional string direction_url = 11;
  optional double latitude = 12;
  optional double longitude = 13;
}

message UserRole {
  string user_role_id = 1;
  string role_name = 2;
  bool is_active = 3;
}



enum SendOtpType {
  REGISTRATION = 0;
  SIGNIN = 1;
}
